--- a/calculator.css
+++ b/calculator.css
@@ -17,7 +17,7 @@ table
  	height: 85px;
  	font-family: lcd;
  	font-size: 50px;
- 	font-color: black;
+ 	color: black;
  	border:10px solid black; 
  	box-sizing: content-box;
 }
@@ -59,13 +59,32 @@ table
 	border-radius: 4px;
 	font-size: 30px;
 }
-td
+/* td
 {
 	border: 1px solid black;
 	align-content: center;
 	border-collapse: collapse;
 	text-align: center;
 	
+} */
+th {
+    height: 20px;
+    border-radius: 0.5em;
+    border: 1px solid #fff;
+    box-shadow: 0 0 0.5em #000;
+}
+
+td {
+    border-radius: 0.5em;
+    border: 1px solid #fff;
+    box-shadow: 0 0 0.5em #000;
+}
+
+td:hover {
+    cursor: pointer;
+    border: 1px solid rgb(137, 155, 156);
+    box-shadow: 0 0 0.8em #000;
+    color: #000;
 }
 input, button
 {
