--- a/calculator.css
+++ b/calculator.css
@@ -1,10 +1,10 @@
 table
 {
-	border: 3px solid black;
+	/* border: 3px solid black; */
 	border-radius: 10px;
 	align-content: center;
 	text-align: center;
-	background-color: black;
+	/* background-color: black; */
 	width: 300px;
 	height: 600px;
 
@@ -12,13 +12,13 @@ table
 #screen
 {
  	background-color: #001;
- 	border-radius: 4px;
+ 	border-radius: 2px;
  	width: 310px;
  	height: 85px;
  	font-family: lcd;
  	font-size: 50px;
  	color: black;
- 	border:10px solid black; 
+ 	border:2px solid black; 
  	box-sizing: content-box;
 }
 #screen:hover
@@ -28,7 +28,7 @@ table
 }
 #ac
 {
-	width: 115px;
+	width: 100%;
 	height: 50px;
 	background-color: tomato;
 	border-color: black;
@@ -45,7 +45,7 @@ table
 }
 #ce
 {
-	width: 115px;
+	width: 100%;
 	height: 50px;
 	border-color: black;
 	border-radius: 4px;
@@ -53,7 +53,7 @@ table
 }
 #equal
 {
-	width: 115px;
+	width: 100%;
 	height: 50px;
 	border-color: black;
 	border-radius: 4px;
@@ -67,7 +67,7 @@ table
 	text-align: center;
 	
 } */
-th {
+table {
     height: 20px;
     border-radius: 0.5em;
     border: 1px solid #fff;
@@ -88,10 +88,12 @@ td:hover {
 }
 input, button
 {
-	width: 62px;
+	width: 100%;
 	height: 40px;
 	border-radius: 4px;
 	font-size: 20px;
+	box-shadow: 0 0 0.5em #000;
+
 	/*align-content: center;border-collapse: collapse;
 	text-align: center;*/
 
@@ -99,6 +101,6 @@ input, button
 input, button:hover
 {
 	cursor: pointer;
-	background-color: black;
+	background-color: cyan;
 	color: white;
 }
